apps/readeck/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck
  namespace: readeck
spec:
  selector:
    app: readeck
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
