apps/readeck/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readeck
  namespace: readeck
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "read.issamhomelab.org"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - "read.issamhomelab.org"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readeck
          namespace: readeck
          port: 8000
